@@ -18,6 +18,7 @@ Philipp "philsmd" Schmidt <philsmd@hashcat.net> (@philsmd)
 
 Gabriele "matrix" Gristina <matrix@hashcat.net> (@gm4tr1x)
 
+* SolarWinds Orion, SHA512(PBKDF2-HMAC-SHA1), kernel module
 * sha1(md5($pass).$salt) kernel module
 * gzip wordlists feature
 * SHA-224 kernel module + optimizations
